// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "ðə kiːŋ siːz ðə gʊdf",
    },
    {
      "english": "the dogs see the wolves",
      "target": "ðə dɔgs siː ðə gʊdfs",
    },
    {
      "english": "i give you the bread",
      "target": "aj gɪvɪŋ ju",
    },
    {
      "english": "the king walks at the river",
      "target": "ðə kiːŋ gɔkɪŋz at ðə riːvər",
    },
    {
      "english": "the king does not see the wolf",
      "target": "ðə kiːŋ nat siːz ðə gʊdf",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "raga βadarat lupuum",
    },
    {
      "english": "the dogs see the wolves",
      "target": "kanai βadarant lupuium",
    },
    {
      "english": "i give you the bread",
      "target": "ago darao tuum",
    },
    {
      "english": "the king walks at the river",
      "target": "raga ambularat fluma",
    },
    {
      "english": "the king does not see the wolf",
      "target": "raga non βadarat lupuum",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "niminimi lukin hojeli",
    },
    {
      "english": "the dogs see the wolves",
      "target": "hohojeli lukin hohojeli",
    },
    {
      "english": "i give you the bread",
      "target": "mi kana sina",
    },
    {
      "english": "the king walks at the river",
      "target": "niminimi tajatiwa hadʒi telohuno",
    },
    {
      "english": "the king does not see the wolf",
      "target": "niminimi ala lukin hojeli",
    },
  ],
  "preset": "tokipona",
}
`;
